crates/scribe-core/tests/snapshots/fixtures__template-html-overlay-rotated.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<div class="scribe-u9mh84-overlay">
  <style>
    .scribe-u9mh84-overlay { position: relative; display: inline-block; line-height: 0; color-scheme: light dark }
    .scribe-u9mh84-overlay img { display: block; max-width: 100% }
    .scribe-u9mh84-overlay span { position: absolute; color: transparent; white-space: pre; line-height: 1; transform-origin: center }
    .scribe-u9mh84-overlay span::selection { color: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent) }
  </style>
  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAaQAAAFACAAAAADW8ld9AAAVoUlEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+aq/4HAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDoPKv8SOLVz/JVf+FAJB50a1e7vGLl3mD132FOVf9FwFA5kV376vcaohjr/H6r/1iwVX/BQCQ+Ve49MRf/82/Pg9017/u67/mzVz1nw0AmX+dPPdXv/zNK4DZo17/9V/12Nn7Hj7jqv8sAMj8qz3pZY6uf8M/fuoEeuuf/LLPePBPPYar/pMAUPnX+8Mj3vg7j57227/+53e+Br++vuPBAGc5w1X/4QCo/Ov9GrwBGy/+4h9+8fEPHh7Pqy0APusnXu6HjnHVfzAAKv9qR39IfW0ATrwq/tM/3wAYf/u+22dc9R8NgMq/2uPv5CWv4Zl03ZsD8JSn8xpzrvqPBkDwr/bbI69TeKY/W3HZH6x4fYDd733SyFX/YQAI/tV+Hd6AZ7rvNa77MgB+ja1XAfjd93rpH+Wq/zAAVP61zv8Vm6/CM/32sD4FcPDHvOQZgF+jvQRX/YcBoPKv9Tf38cpbPNNvOF4X4HF38joVWP8etzySq/7DAFD51/oN87rBM/06j3gwwG81Xh/u/o5HPYFXn3PVfxgAKv9K/g14A57pibfx+gD8Ote8FPzaZ8jk4x/DVf9RAAj+lW5/Ate+JM/0WxOvD3Df3/Dyx+Hh77MN3/sSD37/HzrLVf8hAAj+lf7sEq/Z80y/Tv9aAH99jtcTvOrXnuKWtzr1jO9415/gqv8QAFT+lX4dXk9cMf4OL3cC4Net1wN4yjN4hy87/Jtf+/3XAmB9n09tiKv+7QCo/OuMvwOvzzP95QVeHyB/i4c8DOA3ktfX1qu9WivA477iV8968WLv/J7HeB53feJrvOnNXPUvAiD413nK03nkLTzTb6ZeD+C2J/GqW4B/g9MvDVCAb33l77xjHPf+8CNf7rd4Hn/4Ax/861z1LwMg+Nf5/RWv0/FMv8b2qwD8yR6vD3DhL3mJ67jiez5kf+cTf/cffv7Djj317f+C5/ZrzF+Nq/5lAFT+dX4TXo9n2vtTXqMH+DX61wT423t5fa649SPyxK++PDzmTd/1be/90N/veA6r3+cRD+KqfxkAlX+d73jvX39dnukPj3h9gPXv8dgbAX6d8jpc8fn7+oqXB+BVP+PD/+LPXwWAJ/7o38eLv/lLBLc+hdeY8UD37j6sctXzACD419l4oy87xTP9huP1AJ78DF6jB6bf4voXA4D9H+XEQw4NwDss2h8AjJ/+Cp/5oz/86a/yPpf4nYE34Dl8x8u89NO46nkAUPm3+zWue3GA31vzBgAX/p5X2gGA39jnwuvc9Cqv/zo3z9nYXt4F5Ad/l7uXftAz/v577/z5X+f4K/BA/vXlxeMAZ8tJrno2ACr/dt/8q50Afo2dVwR40j6vDgD8Obz+P9z9Yz8Wj3qN13uxC8yBb/tObvye1wn/xQf/5rf9KS92PQ9079/xcicBPu3nXu07d7jqfgBU/u1e+ZUBuPSnvMxpgHvgwQDArfTfdf3f/cav/8ETHv+ttfFwuPfz2frJVwS9/I++whec5XWDB/qrc7w+wPDb9zxhm6ueBYDg3232xe/xtgXgtPj9BIBEs/LSH/dL9/76p71iwCvAD9/Bh70iAA9953uT1+c5/AbltQHueCqvL656FgBk/sMcvsrf8Wrv9FqPnMOnf0H5s5fhinO//Wef10+v+3vlthu47Hvem+v/7hQPML3SXz78rzeB9d/9xmu9Mlc9CwDBf5zNn3qj7g8+8hVfr8FrRfspnun0239Jz8W/4tVv4IoteLlTPNDtT+RVNwFmL/9Jr8xVzwZA8B/oYT/76x/1yPVNBV7zxfn6v+ABnnzAq/BM5+H1eQ5/dMgbALR7ueo5ABD8R+pf86ufeOvnArNv3rz4Fj8w8Cz3wqN4pr+hvjbP4ddYvBrAn938cr/BVQ8AQOU/2oMAeOXv+qC73/Pz3uTlbun3nvSuJ6FBxxXr3+bBD+eBln/AY24E+LXxb3qAZVe5CgCAyn8OvcMjPv2Xn/hEkG9+T+AmeDpX/PGTeZVNHugpt/KaPZC/yemXAfiGL3vdL7+RqwCA4D/LS//8P3zBmz7k9PEzb7QDvNg1/NIIgD975A14Dr898gYAl/6UV9oC/Ov3/dLGr3z4W77b1z2D/+cAkPnPlEdtNhPAh3xzfN0HB/gzP5+Nv30YD/RWP3vycdcCv/DmfN2HAwc37L/YQ36pASc/8ROC/88AqPynii2e6dN/6Rkf86fvdfMd3/Rj8MhbeKCLf8FLnQH4dWavCfAn+zzujvd8+cM//OULn+pP5v8zACr/RW78sfd6/Pd8TzfGK/wpr93xQP9wF68bwPjb3PAYgF+HB//0S4J/720ufMUHnOL/MQCC/yqv8Ltf/drXnXntH3xneH2ew29Yrw9w79/x2h3QfoP+O14S0Gt+IOf+hCvWT/3t37kt+X8GgMp/mdMf9RE59fFFx8rL8kD5G9z0aIDfarw+wPm/4jVfEwBeBe4BYPi+r3zyqPLgd/+o4/x/AkDwXyjqPPiUs799LQ90zz/w8scBfp2tVwH4nYl3KAAwwRbApXf4gMdNi7me8tkv8af8fwJA8F+ue4nggf7iAq8PsP5dHv4QgF9n9poAwN8RDwPa+/ysX+mnb7/vTz5t5443ezL/jwBQ+W/369TXBnjKrbw+wPRb3PIoAOB32XoJ4Pt+mtf5+Q14mZd5ozc59xk/JP7fACD47zb+Ng9/CMCvo9cFuPXJvJ4AYPfPefUODr7EO9+2AcBrfDg/fxf/fwAQ/HcrX/9p77kA/BscewWAX0evxxV/fMDrC/7kCVz3+HMNgDfl8PH8/wFA5b9bvMZrAHD0B7zMacC/weLVuOI3k9cHfh6e9BabL/c6r/9SWzoWeZb/PwCo/E9RvuTXXwNg+B1e/Hqu+HVufDHwX7P93r/3D7/7u59zzSu9XiTb/P8BQOV/ivn7vz8Af3OW1+eK25/A6wRwN9d8je76nV//9Tt/7uegfwj/fwBQ+Z/m1Cf+xutxxe+veH0gKyXLDe/yLjzuN3/9dy+dfij/fwAg8z/X+30nd9wIvNXPHn/aCa4Y/uyud+D/DwCC/7nyN3nx6wFen0s/zTP1r/YO/D8CgMz/WP7zXzn5oQAXXua2G3/jUfx/BIDM/wI/9S7ra77g7U7w/w8AMv8L+Ac/fFc3vvJLX68Ld3+Z+H8EAJn/FR73uT81APBWP83/JwDI/C9x9hf+6Mnnc/tj3oH/TwCQ+V8kXfj/BQCZq/4HAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/4nAyC46n8yAIKr/icDILjqfzIAgqv+JwMguOp/MgCCq/5beS95IQAIrvov9se1vgvP9Cdvtnls9mo/aF4QACpX/Rf7iaZP5Yqfe/sBpj/8w1//9uD5AyC46r/Yr/GqL8FlF997oDz8Gviur+MFACC46r/Wpb/jnbjimy7w4k958r0/v8Pnrnj+AAiu+q/1+OQ1uOKH4JseDG/29Vz4FZ4/AIKr/ms9Ax7LZff+Aw95dYB32eFPef4ACK76r7XHds9lf2xeC4D6MtzF8wdA5ar/Wj1rrvhLeEUAOMkhzx8AwVX/tY4x3M1lvwevAAArNnj+AAiu+q/1aPhVAO79A7ZeGgBu5TqePwCCq/5rPeIMX7gH8LkDb1QB2H0ij+D5AyC46r9WeRee9No/+/Q/+8BvhA/ksl9IXoHnDwCZq/5r3feYC1zxZj/PZW/4a2fuCZ4vAIKr/otd8wunuOxVv4/L9m54z08Lnj8AZK76r3b+63/1zvKot3+Pjn8RADJX/Q8GQHDV/2QABFf9TwZAcNX/ZABUrvov9uY8h+6nuOf94WsfyvMDgMxV/7XEc5iteNrD4C9fhucHgMpV/8XO8Bx6KGeg8nwBIHPV/2AABFf9TwZAcNX/ZAAEV/1PBkDlqv96/sPffdyuTrzYa70S/wIAKlf9l/u5T3giAPASX/n6vFAABFf9V/uUt3wiIAF/94ZfyAsFQHDVf7Fv/WK69/vFe4b13T/7HsWf9iO8MADIXPVfarjx3A2/9JIAwJ+8+blbnh68YAAEV/3X+oNzfOdL8kyv9I3c9le8EAAEV/3XupXr35BneZttnsELAUBw1X+tynXiWeo1FF4IAIKr/ms9htsbz7K+m8fwQgAQXPVf62Ufee7HeZbvPXrZR/JCABBc9V8rvqn7oF/hmX76Y+bfyAsDgMxV/7XO/sqH7b3x273cKZ/7sx/9rZPf+ppcdqLy/AAgc9V/LfH8/OXL8PwAEFz1PxkAlav+i30Cz8+1PF8AyFz1PxgAwVX/kwEQXPU/GQCVq/47+L7z3ekT/IsACK76r/e373X9dS/2yJMP+/An8S8AQOaq/2L5mV9oAKB+1qcGLwwA5bO56r/Yx30p3PLG0/mXPnEuf2v/jXhhAAiu+i/2q1/Fg3/pGT/8CnzI4/785fiqX+SFASC46r/Y53PjH70xALzc7744n8sLA0Bw1X+tc3/AF14HgGHjS/jTe3ghAAiu+q/159m9Hc/yhr3/gRcCgOCq/1r3cfMmlxmoZzjPCwFA5ar/WgMLns0X2eaFAKBy1X+tY+zybL9+xKN5IQAIrvqv9TDu2uMyw9kP46UewgsBQHDVf63HLvz7XLZ+yte/1JP1BbwwAARX/deavyY/ymUf84iPuFuf/2a8MAAEV/0Xe1f9yD0802N+5lN5oQCQueq/xbf/yc6Nr/aK4oUDQOaq/8EACK76nwyA4Kr/TtMffQkvDAAyV/038d//xm/+zt5sxQsBQOWq/xZP/43f+K17+RcBULnqv9x9v/kbv/k0AE6/zuu9Hi8MAJWr/ot9zG/8vQE2X+P1Xu+lghcOAJmr/msJ6F7h9V7vVXr+ZQBUrvqvd/yj3+YlxIsCAJmr/mu9wl8mcM3rvN7rPZR/EQAyV/0Xu/Bbv/EbTwJ4yOu+3uteywsFgMxV/w1u//Xf+M27Ab34G345LwQAMlf99/DjfuPXf2eP2YoXAoDKVf9N9Jjl8uC3zQsFQOWq/xZP/I3f+O0LQH0FXhgAKlf9l7vzN3/jN+4A9JjXe/3XOsYLA0Dlqv9iH/Ebjwe4+fVe7/Wu518CgMxV/7UEO2/weq/3SF4UAARX/dc7ePrTn37IiwIAmav+a73Kn08A/Su/3uu9Yse/AACZq/6L7f3Ob/zGPxhg+zVf73VfUrwQAMhc9d/g3t/8jd98OgA33sELAYDMVf9NnvYbv/Fb9zFb8UIAIHPVfx//3W/83k/yQgAgc9X/YAAEV/1PBkDlqv96l+7cvkm8KAAIrvqv9hevfeLFbrn5KxPwMJgXBoDgqv9if/Tqv2O48+M+Clg/ePYNvDAABFf91/L7rXj9L/zUh/ENfwTz9+fHeWEAkLnqv9Rfvhyf+CVw+Kp/+77fAX/+CrOLC14wAIKr/ms9kY3PAjY/lt8DXrJbP4EXAoDgqv9aRzxiA+BVeWqD/hS38UIAEFz1X+sa1gDcRB4AwYoXAoDgqv9ar1iefB/AojDA6izHeCEACK76r3Xt27fPAqAC/MrII3khAAiu+i/2NQ/75o9dAgD3fSKPeCgvBAAyV/3X+ol7P/3i9W/z4qffbfymu7/9Lr7zfXghAJC56r+WeKAP/QZeGACCq/77xKv8+DfwQgFQueq/2M/xTP3xR+/wLwBA5qr/wQAIrvqfDIDgqv9eR7wwAARX/Xd63Ec+hBcGgMpV/1X23pYfuJYHGH76m37HM14YACpX/VcZf4MVz3bbt37HPcDL8sIAULnqv0qFux7EFfmr3/QLDXbe9QNfhhcGAJmr/ov4xKU3/7E5wLnv/JanAa/4Ae+8xQsHgMxV/1U+8Nt4yMe+584fftOPrWHn3T7wpfkXASBz1X+Vi2/2R7B58xOAV/zAd97kRQCAzFX/ZaZv+uK7AG76oVfnRQOAzFX/hcaf/JbfNmy/ywe+HC8KAGSu+q/1xG/7nnPAy33gu2zzLwJA5qr/auuf+JbfM2y/ywe+HP8CAGSu+m/w+G/93gvAy33gu2zzwgAgc9V/i9WPfevvA1vv/k28EADIXPXf5R++9fsuMlvxQgAgc9V/n+WPfstfrnghAJC56r/VP7wYLwQAMlf9DwZA5ar/Yufu4qFbAHC0EC8cAMFV/8U++aVe2wDDp1+3uXirJ/JCASBz1X+tW27/6K8CeN/vAjj1Jw/jhQAguOq/1p238w4Af/Nd3PAp71nPfyIvDACVq/5rPZ7ZywN8D/ErL86Lf+LPXTrGCwZAcNV/rbt4UA/w67zWi8MHxvi3vBAABFf911qxDXD+73lj4NgN3McLAUDlqv9aW1wC+D3z6gALJl4IAIKr/ms9jKedA36GrZcH2GOLFwKA4Kr/Wi91LD/TPP6Heb0e2L2Pm3khAAiu+q81f1++6aXe7BVWfBDAb3n+aF4IAGSu+q916dX+AeCtfhrgbX/qDX+FFwIAmav+i134tJ84f8N7fNYM4PHtzLW8EADIXPVfL4MXDQAyV/0PBkBw1f9kAARX/U8GQHDV/2QABFf9TwZAcNX/ZAAEV/1PBkBw1f9kAARX/U8GQHDV/2QABFf9TwZAcNX/ZAAEV/1PBkBw1f9kAARX/U8GQHDV/2QABFf9TwZAcNX/ZAAEV/1PBkBw1f9kAARX/U8GQHDV/2QABFf9TwZAcNX/ZAAEV/1PBkBw1f9kAARX/U8GQHDV/2QABFf9TwZAcNX/ZAAEV/1PBkBw1f9kAARX/U8GwD8CrQ/QSayA91QAAAAASUVORK5CYII=" width="420" height="320" alt="Tilted line S 2 i" />
  <span style="left: 33.63px; top: 71.29px; width: 94.29px; height: 38px; font-size: 38px; transform: rotate(12.99deg)">Tilted</span>
  <span style="left: 130.09px; top: 92.02px; width: 51.81px; height: 32.28px; font-size: 32.28px; transform: rotate(3.18deg)">line</span>
  <span style="left: 368px; top: 150px; width: 24px; height: 26px; font-size: 26px; transform: rotate(0deg)">S</span>
  <span style="left: 368px; top: 174px; width: 25px; height: 20px; font-size: 20px; transform: rotate(0deg)">2</span>
  <span style="left: 362px; top: 195px; width: 25px; height: 91px; font-size: 91px; transform: rotate(0deg)">i</span>
</div>
