crates/scribe-core/tests/snapshots/fixtures__template-json-ld-blank.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "ImageObject",
  "contentUrl": "blank.png",
  "width": 220,
  "height": 140,
  "text": ""
}
</script>
