crates/scribe-core/tests/snapshots/fixtures__template-json-ld-rotated.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<script type="application/ld+json">
{
  "@context": "https://schema.org",
  "@type": "ImageObject",
  "contentUrl": "rotated.png",
  "width": 420,
  "height": 320,
  "text": "Tilted line\nS\n2\ni"
}
</script>
