crates/scribe-core/tests/snapshots/fixtures__template-sr-only-transcript-hello.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<div class="scribe-g923no-transcript">
  <style>
    .scribe-g923no-sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0; border: 0; overflow: hidden; clip: rect(0 0 0 0); clip-path: inset(50%); white-space: normal }
  </style>
  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAARwAAABgCAAAAADqCJIyAAAKvUlEQVR4Ae3AA6AkWZbG8f937o3IzKdyS2Oubdu2bdu2bdu2bWmMnpZKr54yMyLu+Xa3anqmhztr1a+aq54PAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwCCq54fAIKrnh8AgqueHwAq/wl+9z7K23DZPb8PL/Mw/jv99MSZ1+L5+ZPb4a0rzw8AMi/YJWA7eIDcB47xL3j932BxxGW//CbwdR/Oi+wSsB08y3QIbHQ8i/eAHfGi2z7gtX6b5+edfwT2t3h+AAheiJuOHz9+Jw909/Hjx2/gP9HLHj9+/A94tm89fvz48W/k2f7k+PHjj+Y/HQDB/yyvDfw2z/Y7AL/Ds/0O8NriPxsAwf8srw38Ds/i3wX43eRZfgd4bf7TARD8z/LawB8N3O+J94A4//fcb/p94LX5TwdA8D/LzQ+Doz/lfr8NN74k/Db3+8t9uP5R/KcDIPgf5rWA3+F+vwOv+ZrwO9zvd4DX5j8fAMG/X9vlX+VgxQv22sBvc7/fgdd6Tfhd80y/A7w2z+bd5AUZzjeer3GffwkAwb/P2S9/jQfNT2w95r3/iBfJ4z7yZU5tb1z3ip9zF8/fawN/OHDFk+6G13oNce7vAYD2+8Brc0X+4ts9avPE/CFv8L0rnmX98R//8d8DB9/1BtfMT28+nefxJ+/wsI2dnZf/irO8MABU/j2WH/09a4DDJzzhe171R27iX3Lfe/2KAd977599wft87Yzn4+aHPZWjP3s1APhtuPZRetQT+J2XAIC/ugQ3PpLLfvd9ngYw3nrrr3/sl70PzzR+Bbzte/3pOz8dYD3yXPbf/WcB9v/iL774+96YFwyA4N/htlf/1jX3+8NX+BP+Bf/wyr9snmn81te7j+fntYHf4YrfgdcUrwm/DQD8DvBaXPY9b/A07nf+fT8peYDffY2nA4B5Trtv8LM807k3+xleMACCf7uLr/6X0H34D//13b/5lTfBPW99nhfqwus9HWYf+tt3PO2X3kbwB2/ZeD5eG/htrvgdeE14TfhdA8DvAK8NwC++9wA3fuWf3/d33/1iwJd+Ic929l0GXusbfvG3f+CdC8/pHf8E6vv+/n3n/uiD+nyfZ/ACASDzgm0fwG038wB33gQbh1zxbj8Ir/6tjwHgwgf+BLzzD3HZ6/8GiyMu++U3ga/7cC577++Ba3/jxQD42XcY4Cs+lud1x82webEDeMoj4G9fgttvgb97cYB2ehee9Ahg/8Vvgzf46Q2A/IhvhNlfPhaAg22AnR97Q+63fcBr/TYA/Pg7wMYvvDYAf/xGewD7Wzw/AFT+Be8y5wHWPNvP/iA85Bd2uOzkD7/M3/PDn/FYXrA/+R7ofvXFuOwtv/W94TPe8zTP46aHP4XDP3tVgN+GUy8GNz/k6fzOiwP8zS7c9AiAL7oNXvJnFgDE19/7E6w/+ld5lviFV+f5mD4O+O7X5rJX/pE34QUDoPIv+ANekG+D+J4dnql+7evCj38mL9gPAx/4kjzTe37Tn3D0c+/D83rtp8DvvCrA78BrBPCaT+e3Pwzgd4DXBuBHgC9fcIW+/OfX/OZ913C/9351np8/vA1e9R14pjd+o1/hBQIg+Le6+Kvw0q/Bs7zOLfCTvBA/DXwM99PHAj/F8/FawO8A8DvwWgCvCb9rgN8BXhvgb54GL/4G3O/Bbwft53iW9+P5+jngQ3mWD+cFA6DyL3ijBQ+w+mXu90sDvAYP8JjbeBIv2FNvhYc9jGd5vUh+g+fjtYE/GDt42u3wmgCvCfc97sUgfxd4bYDfAN6QZ3vDH4TfeD+e6cQr8Xz9Buj1eJbX6kZeEAAq/4Jvu5kHuPMm7vd0YPFrGIzBdLC8dIwX5G7glXi2U498Ake7x3keNz38KRz8xSvDb8OxlwJ4+A138TsvBn97EW5+GMDdwCvxbK8M3MX9Hlx4vu6EG6/jWbYf9fe8IABU/q3uAb74i3lO9xzjBbkXOMMDnHkC3Hec5/XaT4HffmX4HXj1AsBr/jC/86HwO8BrA3AvcIZnOwPcy/3O8Hy183CaBzjNCwRA8G91N8/HmhfoLHCSBzgJ3Mfz8drA7wC/A68FAK8Jv2P4HeC1ATgLnOTZjgec5X5bPF8XGpzkAU7wAgFQ+beqwNue4Dmd5AXaAFY8wArY4Pl4beAPpnrrM+A1AeA14d4nPCZ/F3htADaAJc82JGzwL9gAVjzAihcIgMq/1Y3A+78JL7JrgXM8wDngWp6PGx/xZPb/4pV+G7ZeDgAee/ocv/2Yvz8PtzwUgGuB8zzbOeBa/gWbm4ec5wHO8wIBEPxb3QA8kRfdNcDTeba8FXQNz89rA7/N78CrVQDQa8Dv8DvAawPAtcDTeLanAdfyL7kG7px4Fj+DFwiA4N/qJYBf4kX38Bn8wYpn+avz8MiO5+e1gN/hd+A1eabXhN/x7wCvDQCPBX6DZ/t14MX4l7wkHPwpz/K4e3mBAAj+rV7vBvj1p/Mi2349WP4iz/LjwFvzfL028PtPezq8Fs/0mnDPE34XeG0AeOM5/OZF7pc/Bbw1/5I3B36GZ/kZXjAAgn+r8m6QH5y8yN4a+PSJZ7rr64C34fm68RGw/1Ww8Qo800sdg288Cw96CABsvz7sfyH3+/6/h+tfiX/JmwV84z0808Wv4AUDIPg3++gz8KsfOfIsw4//DS/EO98Cj/9Yc9nRux3Ca78iz99rA98Or9zzTOXV4NuB1+aZPl7wtb/IFX/3ccDHB/+S698TDt534LLpAy7wggEQ/Jvd8H0B3/BqvzoB4Md/0s3v8HReiO1vAr7uPW8H+Ks3/G1YfKt4/l4bWMFr8iyvCSvgtXmm1/oAGN72a5ZA/vDrnYNX/Cj+ZV98DH7prZ4CcOvb/wQ7vEAAVP7t3ujLP6HxZ290zctcN3vGrc9Y8S9504/5Kvj+H32Vhw1P/HND+fpH8AK8Npe9Fs/ymgDw2tzvS//sr1h/9Be+/C33/vXTgeu+u/Avu/ab373xy495zUfGk3975O3qj/CCAFD5d/iYl323O+G+X+GZNOOF+spbPr4x/M7vALD9Q2/GC3LDI58EzF6JZ3m5jSPgwQ/mfsd+991/Bu77RQB4qZ+9hRfFO8e7j0y/+ZsAr/UdH8QLBEDw7/Faf/PlL8kz1df9ume8CS/cR//Bu/Zcduwj/urNeMFeG+AVFzxL/yoAr82zbf3k970KVzzyK3//Fl407/iHby4Aznz2rx/jBQNA5t/pH55w51268YYbH3mCF8V9f3Lb7d3ND3q1Lf4D/MM/3Hb3qVse/kriX+Hxf/mUwxse+fo9LwwAMlc9HwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8ABFc9PwAEVz0/AARXPT8A/CPscHgnUwvhKwAAAABJRU5ErkJggg==" width="284" height="96" alt="An image of text, transcribed after it." aria-describedby="scribe-g923no-transcript" />
  <div class="scribe-g923no-sr-only" id="scribe-g923no-transcript">
    <p>Hello World</p>
  </div>
</div>
